--- a/views/staff/listStaff.handlebars
+++ b/views/staff/listStaff.handlebars
@@ -14,7 +14,8 @@
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3" style="background-color:#8BAD97;">
-                            <h6 class="m-0 font-weight-bold" style="color:white;">Staff List</h6>
+                            <h5 class="m-0 font-weight-bold" style="color:white;">Staff List <a href="/staff/register" class="card-link mb-2" style="color:#F1EDE5; float:right; padding-right:40px; font-size:large"><i class="fa-solid fa-user-plus"></i> Add Staff</a></h5>
+                            
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -70,7 +71,8 @@
             </div>
 
             {{else}}
-            <h3>No Staff</h3>
+                    <h3 class="m-0 font-weight-bold" style="padding-left:20px ;">No Staff <a href="/staff/register" class="card-link mb-2" style="color:#8BAD97; padding-right:20px ; float:right;"><i class="fa-solid fa-user-plus"></i>  Add Staff</a></h6> <hr>
+
             {{/if}}
     </body>
     <script>
