--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -68,9 +68,6 @@
 	<!-- custom javascript -->
 	<script src="/js/script.js" type="text/javascript"></script>
 
-    <!-- Bootstrap Confirmation-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-confirmation2/dist/bootstrap-confirmation.min.js"></script>
-
 	<style>
 		body {
 		background-color: #F1EDE5;
@@ -93,12 +90,27 @@
 		border-radius: 60px;
 		width: 200px;
 		height: calc(1.5em + .9rem + 2px);
-		left: 100px;
-		top: 564px;
+		margin: auto;
+		display: block;
+		}
+
+		.btn-subscribe-popup{
+		color: #000000;
+		background: #e0d1b5;
+		border-radius: 60px;
+		width: 200px;
+		height: calc(1.5em + .9rem + 2px);
+		margin: auto;
+		display: block;
 		}
 
 		.section-subscribe {
 		background-color: #e0d1b5;
+		}
+
+		.section-subscribe form {
+		margin: auto;
+		display: block;
 		}
 	</style>
 
@@ -109,7 +121,7 @@
 
 	{{> _navbar }}
 
-	<div class="container">
+	<div>
 		{{> _flashmsg }}
 		{{{body}}}
 	</div>
