--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,4 +1,4 @@
-<!-- ========================= SECTION SUBSCRIBE  ========================= -->
+{{!-- <!-- ========================= SECTION SUBSCRIBE  ========================= -->
 <section class="section-subscribe padding-y-lg">
     <div class="container">
 
@@ -11,9 +11,9 @@
 
         <div class="row justify-content-md-center">
             <div class="col-lg-5 col-md-6">
-                <form class="form-row">
+                <form class="form-row" method="POST">
                     <div class="col-md-8 col-7">
-                        <input class="form-control border-0" placeholder="Your Email" type="email">
+                        <input class="form-control border-0" placeholder="Your Email" type="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                     </div> <!-- col.// -->
                     <div class="col-md-4 col-5">
                         <button type="submit" class="btn btn-block btn-subscribe"> <i class="fa fa-envelope"></i>
@@ -27,7 +27,7 @@
 
     </div>
 </section>
-<!-- ========================= SECTION SUBSCRIBE END// ========================= -->
+<!-- ========================= SECTION SUBSCRIBE END// ========================= --> --}}
 
 <!-- ========================= FOOTER ========================= -->
 <footer class="section-footer border-top">
