--- a/views/partials/_staffnav.handlebars
+++ b/views/partials/_staffnav.handlebars
@@ -123,20 +123,18 @@
                     <span>Peformance</span></a>
             </li>
 
-            <!-- Newsletter Dropdown -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseNewsletter" aria-expanded="true"
-                    aria-controls="collapseNewsletter">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Newsletter</span>
-                </a>
-                <div id="collapseNewsletter" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Function:</h6>
-                        <a class="collapse-item" href="/subscription/retrieveNewsletter">Create Newsletter</a>
-                    </div>
-                </div>
+                <a class="nav-link" href="/subscription/retrieveSub">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Subscribers</span></a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="/subscription/retrieveNewsletter">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Create Newsletter</span></a>
+            </li>
+
 
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
