--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -129,6 +129,7 @@
 
 		<div class="row justify-content-md-center">
 			<div class="col-lg-5 col-md-6">
+                {{!-- sends to to subscription route and then 'addSub' --}}
 				<form method="post" action="/subscription/addSub">
 					<div class="row form">
 						<div class="col">
