slight working ensurestaff
broken voucher

--- a/views/staff/editStaff.handlebars
+++ b/views/staff/editStaff.handlebars
@@ -1,4 +1,6 @@
 <div class="row">
+         <a href="/staff/listStaff" style="color: grey ;float:left; padding-left:40px; font-size:large" ><u> <i class="fa-solid fa-chevron-left"></i>Back</u></a>
+
     <div class="col-md-6 mx-auto">
         <div class="card card-body" style="border-radius: 60px ; top: 20px">
             <img class="logo2 cen2" src="/img/whitelogo.png">
