--- a/views/cart/purchase.handlebars
+++ b/views/cart/purchase.handlebars
@@ -1,10 +1,149 @@
+<head>
+    <script>
+        window.onload = function () {
+            var sum = 0;
+            //get price of each product
+            var obj = document.getElementsByClassName("price");
+            var arr = new Array();
+            for (var i = 0; i < obj.length; i++) {
+                arr[i] = parseFloat(obj[i].innerHTML);
+            }
+            console.log("Array of products: " + arr);
+            //get sum of aall products
+            function getSumForEach(arr) {
+                arr.forEach(function (item) {
+                    f_item = parseFloat(item)
+                    sum += f_item;
+                });
+                return sum;
+            }
+            sum = getSumForEach(arr);
+            console.log("Sum of products: " + sum);
+            var shipping = 12;
+            var GST = parseFloat(sum) * 0.07
+            var voucher = parseFloat(sum) * 0.1
+            var afterGST = parseFloat(sum) + parseFloat(GST.toFixed(2)) + shipping - voucher;
+            document.getElementById("afterGST").innerHTML = "SG $" + afterGST;
+            document.getElementById("gst").innerHTML = "SG $" + GST.toFixed(2);
+            document.getElementById("totalamount").value = afterGST;
+        }
+    </script>
+</head>
+<!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-content padding-y">
+    {{!-- Left side of website --}}
     <div class="container">
-        <div class="col-sm-6" style="float:left;">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="col-sm-6" style="float:left;">
                     <a class="btn btn-secondary" href="/catalogue">
                         <span class="fa-solid fa-circle-arrow-left"></span> BACK </a>
                 </div>
-        <h2>Please Choose the Order you want to pay:</h2>
+                <div class="col-sm-6" style="float:right;">
+                    <div class="dropdown">
+                        <button class="btn dropdown-toggle" type="button" data-toggle="dropdown" style="float:right; ;">
+                            <i class="fa-solid fa-arrow-up-wide-short"></i>
+                            <span class="caret"></span>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Comprehensive</a></li>
+                                <li><a href="#">Price Ascending Order</a></li>
+                                <li><a href="#">Price Descending Order</a></li>
+                            </ul>
+                        </button>
+                    </div>
+                </div>
+                <br><br>
+                <hr size="12px" width="100%">
+                <br><br>
+                <div class="container" style="text-align: center;">
+                    <div class="row">
+                        <p class="font-italic col-sm-4 col-md-4 col-lg-4">Name</p>
+                        <p class="font-italic col-sm-4 col-md-4 col-lg-4">Quantity</p>
+                        <p class="font-italic col-sm-4 col-md-4 col-lg-4">Price</p>
+                    </div>
+                </div>
+                {{#if orderItem}}
+                {{#each orderItem}}
+                <div class="container" style="text-align: center;">
+                    <div class="row">
+                        <p class="text-muted col-sm-4 col-md-4 col-lg-4">{{product}}</p>
+                        <p class="amount text-muted col-sm-4 col-md-4 col-lg-4">{{amount}}</p>
+                        <p class="text-muted col-sm-4 col-md-4 col-lg-4">
+                            SG $ <span class="price text-muted">{{price}}</span>
+                        </p>
+                    </div>
+                </div>
+                {{/each}}
+                {{else}}
+                <div class="col-sm-12 col-md-12 col-lg-12" style="text-align: center;">
+                    <h4>There is Error happened, Pls go back to previous page and check your cart item
+                        <br> Or you call hotline: 88138762 for assisting
+                    </h4>
+                </div>
+                {{/if}}
+
+                {{!-- Right side of website --}}
+            </div>
+            <div class="col-sm-6">
+                <h5><b>Summary</b></h5>
+                <hr size="12px" width="100%">
+                {{#each orderItem}}
+                <div class="row">
+                    <p class="col-sm-3" style="float: left;">{{product}}</p>
+                    <p class="col-sm-3" style="float: right;" id="item_price">SG ${{price}}</p>
+                </div>
+                {{/each}}
+                <hr size="12px" width="100%">
+                <div class="row">
+                    <h5 class="col-sm-3" style="float: left;"><b>Shipping</b></h5>
+                    <p class="col-sm-3" style="float: right;">SG $12.00</p>
+                </div>
+                <hr size="12px" width="100%">
+                <div class="row">
+                    <h5 class="col-sm-3" style="float: left;"><b>GST</b></h5>
+                    <p class="col-sm-3" style="float: right;" id="gst"></p>
+                </div>
+                <hr size="12px" width="100%">
+                <div class="row">
+                    <h5 class="col-sm-3" style="float: left;"><b>Voucher: </b></h5>
+                    <p class="col-sm-3" style="float: right;" id="voucher">10%</p>
+                </div>
+                <hr size="12px" width="100%">
+                <br>
+                <div class="row">
+                    <h4 class="col-sm-9" style="float: left;"><b>Total Cost: </b></h4>
+                    <p class="col-sm-3" style="float: right;" id="afterGST">
+                    <h5></h5>
+                    </p>
+                </div>
+                <br>
+                <div>
+                    <form action="" method="POST">
+                        <button type="submit" class="btn btn-success btn-block" id="checkout">
+                            <h4>Check Out</h4>
+                        </button>
+                        <input type="hidden" name="checkout" value="checkout">
+                        <input type="hidden" id="totalamount" name="totalamount" value="">
+                    </form>
+                    <hr size="12px" width="100%">
+                    <div class="text-center">
+                        <form action="" method="POST">
+                            <button type="submit" class="btn btn-danger btn-block" id="cancel">
+                                <h4>Cancel Order</h4>
+                            </button>
+                            <input type="hidden" name="cancel" value="cancel">
+                            <input type="hidden" id="totalamount" name="totalamount" value="">
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
-    d
+    </div>
+
+
+
+    </div> <!-- container .//  -->
 </section>
+<!-- ========================= SECTION CONTENT END// ========================= -->
