--- a/views/product/addProduct.handlebars
+++ b/views/product/addProduct.handlebars
@@ -2,29 +2,17 @@
 	<div class="card card-body">
 		<h3>Add Product</h3>
 		<form action="" method="post">
-			<div class="form-group">
-				<label class="font-italic" for="name">Name</label>
-				<input class="form-control" id="name" name="name" onblur="initialiseName()" required />
-			</div>
-			<div class="custom-file mb-2">
-				<input type="file" class="custom-file-input" id="posterUpload" name="posterUpload" accept="image/png,image/jpeg,image/jpg,image/gif">
-				<label class="custom-file-label" for="customFile">Choose File</label>
-			</div>
-			<div class="text-danger small mb-2" id="posterErr" style="display:none"></div>			
-			{{!-- <div class = form-group>
-				<label class="font-italic" for="image">Product image</label>
-				<p><input type="file"  accept="image/*" name="image" id="file"  onchange="loadFile(event)" style="display: none;" required></p>
-				<p><label for="file" style="cursor: pointer;">Upload Image</label></p>
-				<p><img id="output" width="200" /></p>			
-			</div> --}}
-
-			<div class="form-group">
-				<div class="row mb-2">
-					<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4">
+			<div class="row mb-3">
+				<div class="col-lg-9">
+					<div class="form-group">
+						<label class="font-italic" for="name">Name</label>
+						<input class="form-control mb-1" id="name" name="name" onblur="initialiseName()" />
+					</div>
+					<div class="form-group">
                         <label class="font-italic" for="stock">Stock</label>
                         <input class="form-control" type="number" id="stock" name="stock" required/>
 					</div>
-					<div class="col-12 col-sm-12 col-md-6 col-lg-6">
+					<div class="form-group">
 						<label class="font-italic">Pack Size</label>
 						<br>
 						<div class="form-check form-check-inline">
@@ -44,6 +32,17 @@
 							<label class="form-check-label" for="100">100</label>
 						</div>
 					</div>
+				</div>
+				<div class="col-lg-3">
+					<div class="custom-file mb-2">
+						<input type="file" class="custom-file-input" id="posterUpload" name="posterUpload"
+							accept="image/png,image/jpeg,image/jpg,image/gif">
+						<label class="custom-file-label" for="customFile">Choose File</label>
+					</div>
+					<div class="text-danger small mb-2" id="posterErr" style="display:none"></div>
+					<img id="poster" src="/img/no-image.jpg" alt="Poster" class="border img-thumbnail img-fluid">
+					{{!—- Hidden field to submit URL of poster to the server --}}
+					<input id="posterURL" type="hidden" name="posterURL">
 				</div>
 			</div>
 
@@ -95,10 +94,3 @@
 		</form>
 	</div>
 </div>
-
-{{!-- <script>
-	!-- var loadFile = function(event) {
-		var image = document.getElementById('output');
-		image.src = URL.createObjectURL(event.target.files[0]);
-	}; --
-</script> --}}
