booking fixed, catalogue fixed

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -11,7 +11,7 @@
 					<a class="nav-link" href="/">HOME</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/catalogue">PRODUCTS</a>
+					<a class="nav-link" href="/product/catalogue">PRODUCTS</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/booking/addBooking">BOOKING</a>
