--- a/views/booking/addBooking.handlebars
+++ b/views/booking/addBooking.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="card card-body">
-		<h3>Add Product</h3>
+		<h3>Booking a Service</h3>
 		<form action="" method="post">
 			<div class="form-group">
 				<div class="row mb-2">
