--- a/views/booking/listBookings.handlebars
+++ b/views/booking/listBookings.handlebars
@@ -12,7 +12,7 @@
 					<div class="col-sm-12 col-md-12 col-lg-3">
 						<p class="font-italic">Date</p>
 						<p class="text-info">
-							{{dateRelease}}
+							{{formatDate dateRelease 'DD MMM YYYY'}}
 						</p>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-3">
