--- a/views/product/addProduct.handlebars
+++ b/views/product/addProduct.handlebars
@@ -32,27 +32,11 @@
 							<label class="form-check-label" for="100">100</label>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-3">
-					<div class="custom-file mb-2">
-						<input type="file" class="custom-file-input" id="posterUpload" name="posterUpload"
-							accept="image/png,image/jpeg,image/jpg,image/gif">
-						<label class="custom-file-label" for="customFile">Choose File</label>
-					</div>
-					<div class="text-danger small mb-2" id="posterErr" style="display:none"></div>
-					<img id="poster" src="/img/no-image.jpg" alt="Poster" class="border img-thumbnail img-fluid">
-					{{!—- Hidden field to submit URL of poster to the server --}}
-					<input id="posterURL" type="hidden" name="posterURL">
-				</div>
-			</div>
-
-			<div class="form-group">
-				<div class="row">
-					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
+					<div class="col-12 col-sm-12 col-md-12 col-lg-6" style="padding-left: 0px; padding-right: 0px; padding-bottom: 10px">
 						<label class="font-italic" for="price">Price</label>
 						<input class="form-control" type="text" id="price" name="price" required/>
 					</div>
-					<div class="col-12 col-sm-12 col-md-6 col-lg-6">
+					<div class="col-12 col-sm-12 col-md-6 col-lg-6" style="padding-left: 0px; padding-right: 0px;">
 						<label class="font-italic">Category</label>
 						<br>
 						<div class="form-check form-check-inline">
@@ -86,6 +70,17 @@
 							<label class="form-check-label" for="skin">Skin</label>
 						</div>
 					</div>
+				</div>
+				<div class="col-lg-3">
+					<div class="custom-file mb-2">
+						<input type="file" class="custom-file-input" id="posterUpload" name="posterUpload"
+							accept="image/png,image/jpeg,image/jpg,image/gif">
+						<label class="custom-file-label" for="customFile">Choose File</label>
+					</div>
+					<div class="text-danger small mb-2" id="posterErr" style="display:none"></div>
+					<img id="poster" src="/img/no-image.jpg" alt="Poster" class="border img-thumbnail img-fluid">
+					{{!—- Hidden field to submit URL of poster to the server --}}
+					<input id="posterURL" type="hidden" name="posterURL">
 				</div>
 			</div>
 			<br>
