--- a/views/partials/_staffnav.handlebars
+++ b/views/partials/_staffnav.handlebars
@@ -126,7 +126,7 @@
                 <div id="collapseSubscription" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Function:</h6>
-                        <a class="collapse-item" href="/subscription/retrieveSub">Peformance</a>
+                        <a class="collapse-item" href="/subscription/listSubscriptions">Peformance</a>
                     </div>
                 </div>
             </li>
@@ -141,8 +141,8 @@
                 <div id="collapseNewsletter" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Function:</h6>
-                        <a class="collapse-item" href="/">Create Newsletters</a>
-                        <a class="collapse-item" href="/subscription/retrieveNewsletter">View Newsletters</a>
+                        <a class="collapse-item" href="/newsletter/addNewsletter">Create Newsletters</a>
+                        <a class="collapse-item" href="/newsletter/listNewsletters">View Newsletters</a>
                     </div>
                 </div>
             </li>
