fixed delete modal

--- a/views/newsletter/listNewsletters.handlebars
+++ b/views/newsletter/listNewsletters.handlebars
@@ -84,17 +84,16 @@
                                             </td>
                                             {% endif %} --}}
                                             <td>
-                    
-                                                <form action="/subscription/deleteSub/{{id}}" method="POST">
+                                                <form action="/newsletter/deleteNewsletter/{{id}}">
                     
                                                     <!-- Button to Open the Modal -->
                                                     <button type="button" title="Delete" class="btn btn-danger " data-bs-toggle="modal"
-                                                        data-bs-target="#myModal_/newsletter/deleteNewsletter/{{id}}">
+                                                        data-bs-target="#modal_delete">
                                                         <i class="fas fa-trash-alt"></i>
                                                     </button>
                     
                                                     <!-- The Modal -->
-                                                    <div class="modal" id="myModal_/newsletter/deleteNewsletter/{{id}}">
+                                                    <div class="modal" id="modal_delete">
                                                         <div class="modal-dialog">
                                                             <div class="modal-content">
                     
@@ -107,7 +106,7 @@
                     
                                                                 <!-- Modal body -->
                                                                 <div class="modal-body">
-                                                                    Are you sure you want to delete?
+                                                                    Are you sure you want to delete {{newsletterName}}?
                                                                 </div>
                     
                                                                 <!-- Modal footer -->
@@ -333,3 +332,17 @@
 
 <!-- Page level custom scripts -->
 <script src="/js/demo/datatables-demo.js"></script> --}}
+
+{{!-- JavaScript Bundle with Popper --}}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+<!-- Bootstrap core JavaScript-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/jquery/jquery.slim.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!-- Custom scripts for all pages-->
+<script src="js/sb-admin-2.min.js"></script>
