--- a/views/newsletter/listNewsletters.handlebars
+++ b/views/newsletter/listNewsletters.handlebars
@@ -214,7 +214,7 @@
 
 <style>
     ::selection{
-    background: rgba(23, 98, 184, 0.3);
+    background: #8BAD97(23, 98, 184, 0.3);
     }
     .wrapper{
         
@@ -259,7 +259,7 @@
         background:#e0d1b5;
     }
     #draft:checked ~ nav label.draft,
-    #scheduled:checked ~ nav label.sheduled,
+    #scheduled:checked ~ nav label.scheduled,
     #past:checked ~ nav label.past,
     {{!-- #help:checked ~ nav label.help, --}}
         #about:checked ~ nav label.about{
