--- a/views/newsletter/listNewsletters.handlebars
+++ b/views/newsletter/listNewsletters.handlebars
@@ -55,12 +55,12 @@
                                 <table class="table table-borderless table-hover" style="border-style: none;">
                                     <thead>
                                         <tr class="font-weight-bold">
-                                            <th>Newsletter Id</th>
-                                            <th>Newsletter Name</th>
+                                            <th>Id</th>
+                                            <th>Name</th>
                                             <th>Category</th>
-                                            <th>Created By</th>
                                             <th>Status</th>
-                                            <th>Updated At</th>
+                                            {{!-- <th>Created By/ Modified By</th>
+                                            <th>Date</th> --}}
                                             <th colspan="3">Operations</th>
                                         </tr>
                                     </thead>
@@ -71,9 +71,11 @@
                                             <td>{{id}}</td>
                                             <td>{{newsletterName}}</td>
                                             <td>{{purpose}}</td>
-                                            <td>{{createdBy}}</td>
-                                            <td>{{status}}</td>
-                                            <td>{{updatedAt}}</td>
+                                            <td>
+                                                <p class="badge badge-danger">{{status}}</p>
+                                            </td>
+                                            {{!-- <td>{{createdBy}}</td>
+                                            <td>{{updatedAt}}</td> --}}
                                             {{!-- {% if product.get_status() == 'Low Stock' or product.get_status() == 'Out of Stock' %}
                                             <td>
                                                 <p class="badge badge-danger">xcx</p>
@@ -142,22 +144,23 @@
                                                     <div class="modal-dialog">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
-                                                                <h5 class="modal-title" id="">Product
-                                                                    Details</h5>
+                                                                <h5 class="modal-title" id="">Newsletter Detail</h5>
                                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                                     aria-label="Close"></button>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <div class="card border-info mb-3">
+                                                                <div class="card border mb-3">
                                                                     <img src=""
-                                                                        class="card-img-top" alt="ProductImage">
-                                                                    <div class="card-body" style="color: black;">
-                                                                        <h5 class="card-title" style-color="black"></h5>
+                                                                        class="card-img-top" alt="Newsletter HTML">
+                                                                    {{!-- <div class="card-body" style="color: black;">
+                                                                        <h5 class="card-title" style-color="black">{{newsletterName}}</h5>
                                                                         <p class="card-text"></p>
-                                                                    </div>
+                                                                    </div> --}}
                                                                     <ul class="list-group list-group-flush">
-                                                                        <li class="list-group-item">Category: </li>
-                                                                        <li class="list-group-item">Price: </li>
+                                                                        <li class="list-group-item">Id: {{id}}</li>
+                                                                        <li class="list-group-item">Newsletter Name: {{newsletterName}}</li>
+                                                                        <li class="list-group-item">Category: {{purpose}}</li>
+                                                                        <li class="list-group-item">Status: {{status}}</li>
                                                                         {{!-- {% if product.get_status() == 'Low Stock' or product.get_status() ==
                                                                         'Out of Stock' %}
                                                                         <li class="list-group-item float-right">Stock: {{
@@ -172,13 +175,14 @@
                                                                         {% endif %} --}}
                                                                     </ul>
                                                                     <div class="card-body">
-                                                                        Created on :
+                                                                        Created on:
                                                                         <br>
-                                                                        Created by :
+                                                                        Created by:
                                                                         <br>
-                                                                        Modified on :
+                                                                        <hr>
+                                                                        Modified on:
                                                                         <br>
-                                                                        Modified by :
+                                                                        Modified By:
                                                                     </div>
                                                                 </div>
                                                             </div>
