--- a/views/subscription/listSubscriptions.handlebars
+++ b/views/subscription/listSubscriptions.handlebars
@@ -1,28 +1,202 @@
-<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th>Verified</th>
-            <th>Delete</th>
-        </tr>
-    </thead>
-    <tbody>
-        {{#each subscriptions}}
-        <tr>
-            <td>{{id}}</td>
-            <td>{{firstName}}</td>
-            <td>{{lastName}}</td>
-            <td>{{email}}</td>
-            <td>{{verified}}</td>
-            <td>
-                <h6 class="delete"><a href="/subscription/deleteSub/{{id}}" data-toggle="confirmation" data-title="Confirm delete?">
-                        Delete
-                    </a></h6>
-            </td>
-        </tr>
-        {{/each}}
-    </tbody>
-</table>
+<body id="page-top">
+    <!-- Page Wrapper -->
+    <div id="wrapper">
+        <!-- Content Wrapper -->
+        <div id="content-wrapper" class="d-flex flex-column">
+            <!-- Main Content -->
+            <div id="content">
+                <!-- Begin Page Content -->
+                <div class="container-fluid">
+
+                    <!-- Page Heading -->
+                    <h1 class="display-4">Subscription List</h1>
+                    <br>
+                    <div class="row">
+                        <div class="col-10 col-md-8 col-sm-2">
+                            <form>
+                                <div class="d-none d-sm-inline-block form-inline navbar-search "
+                                    style='padding-bottom: 20px;'>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control bg-light bvoucher-0 small"
+                                            placeholder="Subscription ID..." aria-label="Search"
+                                            aria-describedby="basic-addon2" id='search-voucher'>
+                                        <div class="input-group-append">
+                                            <button class="btn voucher-search-button" type="button"
+                                                style="background-color:#8BAD97; border: 0px;">
+                                                <i class="fas fa-search fa"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div class="wrapper">
+                        <table class="table table-borderless table-hover" style="border-style: none;">
+                            <thead>
+                                <tr class="font-weight-bold">
+                                    <th>Id</th>
+                                    <th>First name</th>
+                                    <th>Last Name</th>
+                                    <th>Email</th>
+                                    <th>Verified</th>
+                                    {{!-- <th>Created By/ Modified By</th>
+                                    <th>Date</th> --}}
+                                    <th colspan="1">Operations</th>
+                                </tr>
+                            </thead>
+                            <br>
+                            <tbody>
+                                {{#if subscriptions}}
+                                {{#each subscriptions}}
+                                <tr style="border: solid; border-width: 1px 0;">
+                                    <td>{{id}}</td>
+                                    <td>{{firstName}}</td>
+                                    <td>{{lastName}}</td>
+                                    <td>{{email}}</td>
+                                    <td>
+                                        <p class="badge badge-success">{{verified}}</p>
+                                    </td>
+                                    {{!-- <td>{{createdBy}}</td>
+                                    <td>{{updatedAt}}</td> --}}
+                                    {{!-- {% if product.get_status() == 'Low Stock' or product.get_status() ==
+                                    'Out of Stock' %}
+                                    <td>
+                                        <p class="badge badge-danger">xcx</p>
+                                    </td>
+                                    {% else %}
+                                    <td>
+                                        <p class="badge badge-success">xccxcxcx</p>
+                                    </td>
+                                    {% endif %} --}}
+                                    <td>
+                                        <form action="/subscription/deleteSub/{{id}}">
+                        
+                                            <!-- Button to Open the Modal -->
+                                            <button type="button" title="Delete" class="btn btn-danger " data-bs-toggle="modal"
+                                                data-bs-target="#modal_delete">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </button>
+                        
+                                            <!-- The Modal -->
+                                            <div class="modal" id="modal_delete">
+                                                <div class="modal-dialog">
+                                                    <div class="modal-content">
+                        
+                                                        <!-- Modal Header -->
+                                                        <div class="modal-header">
+                                                            <h4 class="modal-title">Delete Confirmation</h4>
+                                                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                                        </div>
+                        
+                                                        <!-- Modal body -->
+                                                        <div class="modal-body">
+                                                            Are you sure you want to delete {{id}} = {{email}}?
+                                                        </div>
+                        
+                                                        <!-- Modal footer -->
+                                                        <div class="modal-footer">
+                                                            <input type="submit" value="Delete" class="btn btn-danger">
+                        
+                                                            <button type="button" class="btn btn-secondary"
+                                                                data-bs-dismiss="modal">Cancel</button>
+                                                        </div>
+                                        </form>
+                                    </td>
+                                </tr>
+                                {{/each}}
+                                {{else}}
+                                <div>
+                                    <td colspan="6" style="text-align:center;"><h6 class="empty">You currently have no subscribers.</h6></td>
+                                </div>
+                                {{/if}}
+                            </tbody>
+                        </table>
+                    </div>
+
+                    </div>
+                    <!-- /.container-fluid -->
+
+                </div>
+                <!-- End of Main Content -->
+
+            </div>
+            <!-- End of Content Wrapper -->
+
+        </div>
+        <!-- End of Page Wrapper -->
+
+        <!-- Scroll to Top Button-->
+        <a class="scroll-to-top rounded" href="#page-top">
+            <i class="fas fa-angle-up"></i>
+        </a>
+
+</body>
+
+<style>
+    ::selection {
+        background: #8BAD97(23, 98, 184, 0.3);
+    }
+
+    .wrapper {
+
+        width: 100%;
+        padding: 25px 30px 30px 30px;
+        border-radius: 5px;
+        background: #fff;
+
+    }
+
+    .wrapper header {
+        font-size: 30px;
+        font-weight: 600;
+        padding-bottom: 20px;
+    }
+
+    .wrapper nav {
+        position: relative;
+        width: 100%;
+        height: 50px;
+        display: flex;
+        margin-bottom: 10px;
+        align-items: center;
+    }
+
+    .wrapper nav label {
+        display: block;
+        height: 100%;
+        width: 100%;
+        text-align: center;
+        line-height: 50px;
+        cursor: pointer;
+        position: relative;
+        z-index: 1;
+        color: #8BAD97;
+        font-size: 17px;
+        border-radius: 5px;
+        margin: 0 5px;
+
+        transition: all 0.3s ease;
+    }
+
+    .wrapper nav label:hover {
+        margin-bottom: 10px;
+        background: #e0d1b5;
+    }
+
+</style>
+
+{{!-- JavaScript Bundle with Popper --}}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+<!-- Bootstrap core JavaScript-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/jquery/jquery.slim.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!-- Custom scripts for all pages-->
+<script src="js/sb-admin-2.min.js"></script>
