--- a/views/staff/register.handlebars
+++ b/views/staff/register.handlebars
@@ -7,38 +7,34 @@
             <form action="" method="post">
                 <div>
                     <div class="form-group left spacing1">
-                        <label for="staffno">Staff Number</label>
-                        <input type="text" class="form-control" name="staffno" value="{{staffno}}" required>
-                    </div>
-                    <div class="form-group left spacing2">
                         <label for="username">Username</label>
                         <input type="text" class="form-control" name="username" value="{{username}}" required>
                     </div>
-                    <div class="form-group left spacing1">
-                        <label for="firstname">First Name</label>
+                    <div class="form-group left spacing2">
+                      <label for="firstname">First Name</label>
                         <input type="text" class="form-control" name="firstname" value="{{firstname}}" id="firstname" onblur="initialiseFirstname()" required>
                     </div>
-                    <div class="form-group left spacing2">
-                        <label for="lastname">Last Name</label>
+                    <div class="form-group left spacing1">
+                         <label for="lastname">Last Name</label>
                         <input type="text" class="form-control" name="lastname" value="{{lastname}}" id="lastname" onblur="initialiseLastname()"required>
                     </div>
-
-                    <div class="form-group clear left spacing1">
+                    <div class="form-group left spacing2">
                         <label for="email">Email</label>
                         <input type="email" name="email" class="form-control" value="{{email}}" required>
                     </div>
 
-                    <div class="form-group left spacing2">
+                    <div class="form-group clear left spacing1">
                         <label for="password">Password</label>
                         <input type="password" name="password" class="form-control" value="" required>
                     </div>
-                    <div class="form-group clear left spacing1">
+
+                    <div class="form-group left spacing2">
                         <label for="password2">Confirm Password</label>
                         <input type="password" name="password2" class="form-control" value="" required>
                     </div>
-                </div>
 
-                <div class=" left spacing2" style="padding-top:25px; padding-left:45px">
+
+                <div class=" centered clear" style="padding-top:25px;">
                     <button type="submit" class="staffbtn" >ADD STAFF</button>
                 </div>
 
