--- a/views/product/catalogue.handlebars
+++ b/views/product/catalogue.handlebars
@@ -33,8 +33,6 @@
 
                         <p class="mb-2"> {{size}} Servings <small class="text-muted">(Per Pack)</small></p>
 
-                        <p class="text-muted ">Guangzhou Yichuang Electronic Co</p>
-
                         <hr>
 
                         <p class="mb-3">
@@ -42,12 +40,13 @@
                             <span class="tag"> 23 reviews </span>
                             <span class="tag"> China </span>
                             <span class="tag"> {{replaceCommas category}} </span>
-
                         </p>
 
-                        <input type="hidden" name="user_id" value="{{id}}">
+                        <a href="/itemDesc"> Enlarge  </a>
+
+                        {{!-- <input type="hidden" name="user_id" value="{{id}}">
                         <input type="hidden" name="amount" value="{{amount}}">
-                        <button id="btnSubmit" type="submit" class="btn btn-primary">Add to Cart</button>
+                        <button id="btnSubmit" type="submit" class="btn btn-primary">Add to Cart</button> --}}
                     </figcaption>
                 </figure>
                 </form>
