--- a/views/cart/purchase.handlebars
+++ b/views/cart/purchase.handlebars
@@ -28,6 +28,12 @@
             document.getElementById("totalamount").value = afterGST;
         }
     </script>
+    <script>
+        $('#datepicker').datepicker({
+            format: 'dd/mm/yyyy',
+            uiLibrary: 'bootstrap4',
+        });
+    </script>
 </head>
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-content padding-y">
@@ -109,7 +115,11 @@
                     <p class="col-sm-3" style="float: right;" id="voucher">10%</p>
                 </div>
                 <hr size="12px" width="100%">
-                <br>
+                <div class="row">
+                    <h5 class="col-sm-3" style="float: left;"><b>Status: </b></h5>
+                    <p class="col-sm-3" style="float: right;" id="voucher">{{status}}</p>
+                </div>
+                <hr size="12px" width="100%">
                 <div class="row">
                     <h4 class="col-sm-9" style="float: left;"><b>Total Cost: </b></h4>
                     <p class="col-sm-3" style="float: right;" id="afterGST">
@@ -120,7 +130,7 @@
                 <div>
                     <form action="" method="POST">
                         <button type="submit" class="btn btn-success btn-block" id="checkout">
-                            <h4>Check Out</h4>
+                            <h4>Pay</h4>
                         </button>
                         <input type="hidden" name="checkout" value="checkout">
                         <input type="hidden" id="totalamount" name="totalamount" value="">
