--- a/views/staff/profile.handlebars
+++ b/views/staff/profile.handlebars
@@ -30,7 +30,7 @@
                     <div class="card-body">
 
                         <div style="float:right;">
-                            <a href="/staff/editCust/{{id}}" class="card-link mb-2" style="color: #8BAD97">
+                            <a href="/staff/editProfile/{{id}}" class="card-link mb-2" style="color: #8BAD97">
                                 <i class="fas fa-pencil-alt"></i>
                                 Edit
                             </a>
