--- a/views/product/catalogue.handlebars
+++ b/views/product/catalogue.handlebars
@@ -25,7 +25,7 @@
 						</a>
                     </div> <!-- img-wrap.// -->
                     <figcaption class="info-wrap">
-                        <a href="#" class="title mb-2">{{name}}</a>
+                        <a href="/product/itemDesc" class="title mb-2">{{name}}</a>
                         <div class="price-wrap">
                             <span class="price">${{price}}</span>
                             <small class="text-muted">/per pack</small>
