--- a/views/product/catalogue.handlebars
+++ b/views/product/catalogue.handlebars
@@ -42,7 +42,7 @@
                             <span class="tag"> {{replaceCommas category}} </span>
                         </p>
 
-                        <a href="/itemDesc"> Enlarge  </a>
+                        <a href="/product/itemDesc/{{id}}"> Enlarge  </a>
 
                         {{!-- <input type="hidden" name="user_id" value="{{id}}">
                         <input type="hidden" name="amount" value="{{amount}}">
