--- a/views/newsletter/addNewsletter.handlebars
+++ b/views/newsletter/addNewsletter.handlebars
@@ -45,16 +45,24 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="content">HTML Content</label>
-                            <input class="form-control" type="text" id="summernote" name="content" required />
-                        </div>
-
-                        <div class="row">
-                            <div class="col-xs-12 text-right">
-                                <button class="btn btn-sm btn-primary" id="btn-get-content">Get Content</button>
-                                <button class="btn btn-sm btn-primary" id="btn-get-text">Get Text</button>
-                                <button class="btn btn-sm btn-success" id="btn-set-content">Set Content</button>
-                                <button class="btn btn-sm btn-danger" id="btn-reset">Reset</button>
+                            <label for="htmlContent">HTML Content</label>
+                            {{!-- <input class="form-control" type="textarea" id="summernote" name="htmlContent" required /> --}}
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <textarea id="ta-1" cols="30" rows="30" name="htmlContent"></textarea>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 text-right">
+                                    <button class="btn btn-sm btn-primary" id="btn-get-content">Get Content</button>
+                                    <button class="btn btn-sm btn-primary" id="btn-get-text">Get Text</button>
+                                    <button class="btn btn-sm btn-success" id="btn-set-content">Set Content</button>
+                                    <button class="btn btn-sm btn-danger" id="btn-reset">Reset</button>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <code class="col-xs-12" id="content">
+                                                      </code>
                             </div>
                         </div>
 
@@ -114,24 +122,7 @@
         <i class="fas fa-angle-up"></i>
     </a>
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
-
-    <!-- Page level plugins -->
-    <script src="vendor/datatables/jquery.dataTables.min.js"></script>
-    <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
-
-    <!-- Page level custom scripts -->
-    <script src="js/demo/datatables-demo.js"></script>
-
-    <script>
+    {{!-- <script>
 
         $(document).ready(function () {
                 $('#summernote').summernote(
@@ -139,6 +130,7 @@
                         placeholder: 'Hello stand alone ui',
                         tabsize: 2,
                         height: 120,
+                        theme: 'monokai',
                         toolbar: [
                             ['style', ['style']],
                             ['font', ['bold', 'underline', 'clear']],
@@ -147,10 +139,72 @@
                             ['table', ['table']],
                             ['insert', ['link', 'picture', 'video']],
                             ['view', ['fullscreen', 'codeview', 'help']]
-                        ]
+                        ]                     
                     } 
                 );
             });
+
+    </script> --}}
+
+    <script>
+        (function () {
+            var content =
+                "<p><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzC_Ho_08G0m7PyxJOPLpPujM9UTLxvaE-5nXewscnqa3GMWjGwg' alt='Image result for summernote.js'></p><h1>Summernote</h1>";
+            var $sumNote = $("#ta-1")
+                .summernote({
+                    callbacks: {
+                        onPaste: function (e, x, d) {
+                            $sumNote.code(($($sumNote.code()).find("font").remove()));
+                        }
+                    },
+
+                    dialogsInBody: true,
+                    dialogsFade: true,
+                    disableDragAndDrop: true,
+                    //                disableResizeEditor:true,
+                    height: "150px",
+                    tableClassName: function () {
+                        alert("tbl");
+                        $(this)
+                            .addClass("table table-bordered")
+
+                            .attr("cellpadding", 0)
+                            .attr("cellspacing", 0)
+                            .attr("border", 1)
+                            .css("borderCollapse", "collapse")
+                            .css("table-layout", "fixed")
+                            .css("width", "100%");
+
+                        $(this)
+                            .find("td")
+                            .css("borderColor", "#ccc")
+                            .css("padding", "4px");
+                    }
+                })
+                .data("summernote");
+
+            //get
+            $("#btn-get-content").on("click", function () {
+                var y = $($sumNote.code());
+
+                console.log(y[0]); console.log(y.find("p> font"));
+                var x = y.find("font").remove();
+                $("#content").text($("#ta-1").val());
+            });
+            //get text$($sumNote.code()).find("font").remove()$($sumNote.code()).find("font").remove()
+            $("#btn-get-text").on("click", function () {
+                $("#content").html($($sumNote.code()).text());
+            });
+            //set
+            $("#btn-set-content").on("click", function () {
+                $sumNote.code(content);
+            }); //reset
+            $("#btn-reset").on("click", function () {
+                $sumNote.reset();
+                $("#content").empty();
+            });
+        })();
+
     </script>
 
 </body>
