subscription + newsletters all functions working

--- a/views/subscription/listSubscriptions.handlebars
+++ b/views/subscription/listSubscriptions.handlebars
@@ -75,12 +75,12 @@
                         
                                             <!-- Button to Open the Modal -->
                                             <button type="button" title="Delete" class="btn btn-danger " data-bs-toggle="modal"
-                                                data-bs-target="#modal_delete">
+                                                data-bs-target="#modal_{{id}}">
                                                 <i class="fas fa-trash-alt"></i>
                                             </button>
                         
                                             <!-- The Modal -->
-                                            <div class="modal" id="modal_delete">
+                                            <div class="modal" id="modal_{{id}}">
                                                 <div class="modal-dialog">
                                                     <div class="modal-content">
                         
