--- a/views/newsletter/addNewsletter.handlebars
+++ b/views/newsletter/addNewsletter.handlebars
@@ -67,7 +67,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="status">File Upload</label>
+                            <label for="status">Poster Upload</label>
                             <div class="col-lg-3">
                                 <div class="custom-file mb-2">
                                     <input type="file" class="custom-file-input" id="posterUpload" name="posterUpload"
@@ -85,11 +85,11 @@
                             <label for="status">Status</label>
                             <br>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" id="draft" value="Draft" name="status">
+                                <input class="form-check-input" type="radio" id="draft" value="Draft" name="status" required>
                                 <label class="form-check-label" for="draft">Draft</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" id="completed" value="Completed" name="status">
+                                <input class="form-check-input" type="radio" id="completed" value="Completed" name="status" required>
                                 <label class="form-check-label" for="completed">Completed</label>
                             </div>
                         </div>
