--- a/views/newsletter/listNewsletters.handlebars
+++ b/views/newsletter/listNewsletters.handlebars
@@ -121,16 +121,8 @@
                                                                 </div>
                                                 </form>
                                             </td>
-                                            <td>
-                                                <form action="" method="POST">
-                                                    <!-- Button to Open the Modal -->
-                                                    <button type="submit" title="Update" class="btn btn-primary bg-gradient-primary"
-                                                        data-bs-target="#myModal_">
-                                                        <i class="fas fa-pen"></i>
-                                                    </button>
-                    
-                                                </form>
-                                            </td>
+                                            <td><a href="/newsletter/editNewsletter/{{id}}" class="btn btn-primary"><i
+                                                        class="fas fa-pen"></i></a></td>
                     
                                             <td>
                                                 <button type="button" title="View" class="btn btn-info" data-bs-toggle="modal"
